# tyreach

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  deny.toml  prek.toml  pyproject.toml  release.toml
.claude/skills/rust-review/: SKILL.md
.github/: dependabot.yml
.github/workflows/: audit.yml  cargo-deny.yml  release.yml  review.yml
docs/: output-format.md
docs/plans/: plan.md
src/: budget.rs  classify.rs  entry.rs  extract.rs  lib.rs  main.rs  model.rs  parse.rs  qname.rs  rank.rs  render.rs  toon_io.rs  walker.rs  workspace.rs
src/lsp/: client.rs  protocol.rs  server.rs
tests/: budget_smoke.rs  empty_snapshot_smoke.rs  entry_override.rs  extract_smoke.rs  golden.rs  init_entries.rs  lsp_smoke.rs  realistic_smoke.rs  render_smoke.rs  roundtrip.rs  setup_smoke.rs  toon_smoke.rs  walk_smoke.rs
tests/fixtures/class_target/: pyproject.toml
tests/fixtures/class_target/class_target/: app.py
tests/fixtures/medium_app/: pyproject.toml
tests/fixtures/medium_app/medium_app/: a.py  b.py  dyn.py  main.py  shared.py
tests/fixtures/realistic/: pyproject.toml
tests/fixtures/realistic/realistic/: __init__.py  cli.py  core.py  decorators.py  dynamic.py  partial_usage.py
tests/fixtures/realistic/realistic/diamond/: __init__.py  a.py  b.py  shared.py
tests/fixtures/same_module/: pyproject.toml
tests/fixtures/same_module/same_module/: app.py
tests/fixtures/tiny_app/: pyproject.toml
tests/fixtures/tiny_app/tiny_app/: lib.py  main.py
tests/golden/: medium_app.toon  medium_app.txt
