[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tyreach"
description = "Ranked, token-budgeted reachability snapshot of Python symbols via tree-sitter + ty LSP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "mojzis", email = "mojzisek@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["python", "reachability", "call-graph", "lsp", "static-analysis"]
dynamic = ["version"]
dependencies = []

[project.urls]
homepage = "https://github.com/mojzis/tyreach"
repository = "https://github.com/mojzis/tyreach"
documentation = "https://github.com/mojzis/tyreach#readme"

[dependency-groups]
dev = ["ty"]

[tool.maturin]
bindings = "bin"
strip = true
